--- a/src/assets/jsons/languages/en.json
+++ b/src/assets/jsons/languages/en.json
@@ -112,6 +112,7 @@
   "glasses": "Glasses",
   "go_shopping": "Go Shopping",
   "gender": "Gender",
+  "google_API_KEY":"AIzaSyDIZ6k-UKsT6ALVRUlIp21YdSTQL4Y7HH8",
 
   "home": "Home",
   "healty_and_beauty": "Health & Beauty",
